<resources>
    <string name="app_name">2b|!2b (gamma)</string>
    <string name="gpsTitle">Your Current GPS Location</string>
    <string name="homeFragmentToolbarTitle">AIMS Android (alpha)</string>
    <string name="describe_this_location">Describe this location...</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="awesome">Awesome! 😁</string>
    <string name="boring">Boring 🙄</string>
    <string name="atmosphere">What is the atmosphere here?</string>
    <string name="your_reviews">Your Reviews</string>
    <string name="submit">Submit</string>
    <string name="review_id">Review ID:</string>
    <string name="menu_text_navigation">Profile</string>
    <string name="menu_text_trips">My Trips</string>
    <string name="menu_text_current">Home</string>
    <string name="current_trip_toolbar_title">Home</string>
    <string name="trips_toolbar_title">Your Trips</string>
    <string name="navigation_toolbar_title">Profile</string>
    <string name="fab_content_desc">Current Location</string>
    <string name="view_trip">View Trip</string>
    <string name="list_item">List Item</string>
    <string name="details">Details</string>
    <string name="navigate">Navigate</string>
    <string name="address">Address</string>
    <string name="fuel">Fuel</string>
    <string name="requested_quantity">Requested Quantity</string>
    <string name="trip_name">Trip Name</string>
    <string name="truck">Truck</string>
    <string name="trailer">Trailer</string>
    <string name="site_container">Site Container</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>