<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="review"
            type="com.example.aimsandroid.database.Review" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/reviewIdText"
                style="@style/san_francisco_bold_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/review_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/san_francisco_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{String.valueOf(review.id)}"
                app:layout_constraintBaseline_toBaselineOf="@+id/reviewIdText"
                app:layout_constraintStart_toEndOf="@+id/reviewIdText"
                tools:text="1234" />

            <TextView
                android:id="@+id/textView4"
                style="@style/san_francisco_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/latitude"
                app:layout_constraintStart_toStartOf="@+id/reviewIdText"
                app:layout_constraintTop_toBottomOf="@+id/reviewIdText" />

            <TextView
                android:id="@+id/textView5"
                style="@style/san_francisco_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/longitude"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                style="@style/san_francisco_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@{String.valueOf(review.latitude)}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                tools:text="32.1417" />

            <TextView
                android:id="@+id/textView7"
                style="@style/san_francisco_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(review.longitude)}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                tools:text="42.3489" />

            <TextView
                android:id="@+id/textView8"
                tools:text="This place is awesome!! Loved it!!"
                style="@style/san_francisco_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{review.desc}"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView9"
                style="@style/san_francisco_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@{review.review}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/awesome" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</layout>